Fix spacing for post cards

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -6,7 +6,7 @@
 
         .post-title {
             font-size: 24px;
-            margin-bottom: -8px;
+            margin-bottom: -6px;
         }
     }
     .row {
